	  iconnames instead of their titles.
	* uwm/workspaces.c: added function Win2WS
	* uwm/workspaces.h: added prototype for Win2WS
	* uwm/wingroups.c: all group members are now initially placed on the
	  same workspace.
	* uwm/windows.c: group members are now ultimized on workspace of group
	  leader
        * uwm/workspaces.c: added group support in StickyWin()

2001-04-15  Christian Ruppert <arc@gmx.li>

	* uwm/wingroups.c: added some functions
	* uwm/wingroups.h: added prototypes
	* uwm/uwm.c: added XContext UWMGroupContext
	* uwm/init.c: added init for UWMGroupContext
	* uwm/workspaces.c: window groups are now moved from one ws to another
	  as a whole.
	* uwm/nodes.c: added funcion NodeCount.
	* uwm/nodes.h: added prototype for NodeCount.
	* uwm/windows.c: added group removal if group leader is deleted

2001-04-14  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: fixed static gravity (must be TitleHight instead of
	  TitleHeight/2)
	* uwm/nodes.h: added some comments for documentation, fixed
	  #define False
	* uwm/uwm.h: added member group to UltimateContext
	* uwm/properties.c: added UpdateWinGroup-call to UpdateWMHints
	* uwm/windows.c: added init for uc->group in UltimizeWin
	* uwm/properties.c: changed SetWinMapState to disenborder window in case
	  it is withdrawn.
	* uwm/handlers.c: existing withdrawn windows are no longer deultimized.
	* uwm/wingroups.h: new file
	* uwm/wingroups.c: new file
	* uwm/Makefile.am: added files wingroups.h and wingroups.c

2001-04-13  Christian Ruppert <arc@gmx.li>

	* uwm/uwm.h: removed UltimateContext.parent
	* uwm/windows.c: replaced uc->parent by TheScreen.root, remoced argument
	  parent from UltimizeWin()
	* uwm/handlers.c: removed parent arguments from UltimizeWin calls.
	* uwm/uwm.c: removed parent arguments from UltimizeWin calls.
	* uwm/windows.c: moved gravity handling out of window reparenting
	  routines
	* uwm/windows.h: added prototype and defines for GravitizeWin